RESOLVED FIXED309040
Fix TextIndicator for -webkit-user-select: none ranges during find in page
https://bugs.webkit.org/show_bug.cgi?id=309040
Summary Fix TextIndicator for -webkit-user-select: none ranges during find in page
ccarley2
Reported 2026-03-02 21:45:39 PST
When showing a text indicator on -webkit-user-select: none matches, we get a solid yellow box. None of the underlying text is shown.
Attachments
Radar WebKit Bug Importer
Comment 1 2026-03-02 21:45:47 PST
ccarley2
Comment 2 2026-03-02 21:50:54 PST
EWS
Comment 3 2026-03-04 15:38:21 PST
Committed 308667@main (e24a99cde1a5): <https://commits.webkit.org/308667@main> Reviewed commits have been landed. Closing PR #59774 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.