Fix TextIndicator for -webkit-user-select: none ranges during find in page https://bugs.webkit.org/show_bug.cgi?id=309040 rdar://171590205

Reviewed by Megan Gardner.

When text indicators are shown for user-select: none matches, only a solid
yellow box is rendered. Users cannot see any of the underlying text. This
is because it tries to use the selection to render, but user-select: none
matches cannot have selections.

To fix this issue, I check if the range is collapsed, and switch the text
indicator options to PaintAllContent. This allows the text to show, but
the background does not match the yellow indicator.

In the future, there needs to be a larger refactor of the TextIndicator
code to decouple it from selections.

* Source/WebCore/page/TextIndicator.cpp:
(WebCore::TextIndicator::createWithSelectionInFrame):
* Source/WebKit/WebProcess/WebPage/FindController.cpp:
(WebKit::FindController::findString):
(WebKit::FindController::hideFindUI):
(WebKit::FindController::updateFindIndicator):
* Source/WebKit/WebProcess/WebPage/FindController.h:
* selection.html: Added.

Canonical link: https://commits.webkit.org/308667@main